--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--Author-->
-    <meta name="author" content="contact@amigautier.us" />
+    <meta name="author" content="info.amigautier@gmail.com" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
@@ -67,9 +67,9 @@
             </div>
 
             <div class="redes_sociales1" id="redes_sociales1">
-                <a class="email_txt" id="email_txt" href="mailto:contact@amigautier.us" target="blank">Email</a>
+                <a class="email_txt" id="email_txt" href="mailto:info.amigautier@gmail.com" target="blank">Email</a>
                 <div class="textohover_email"><p>Contact me</p></div>
-                <a class="icofont-email" id="ico-gmail" href="mailto:contact@amigautier.us" target="blank"></a>
+                <a class="icofont-email" id="ico-gmail" href="mailto:info.amigautier@gmail.com" target="blank"></a>
                 <div class="textohover_email"><p>Contact me</p></div>
             </div>
 
@@ -273,7 +273,7 @@
                 <h3>FIND ME</h3>
 
                 <p class="icofont-email" id="gmail">
-                    <a href="mailto:contact@amigautier.us" target="blank">
+                    <a href="mailto:info.amigautier@gmail.com" target="blank">
                         Email</a>
                 </p>
 
