--- a/product.html
+++ b/product.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="redes_sociales1" id="redes_sociales1">
-                <a class="email_txt" id="email_txt" href="mailto:info.amigautier@gmail.com" target="blank">Hola</a>
+                <a class="email_txt" id="email_txt" href="mailto:info.amigautier@gmail.com" target="blank">Email</a>
                 <div class="textohover_email"><p>Contact me</p></div>
                 <a class="icofont-email" id="ico-gmail" href="mailto:info.amigautier@gmail.com" target="blank"></a>
                 <div class="textohover_email"><p>Contact me</p></div>
