--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ami Gautier: Visual art</title>
     <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://www.amigautier.us" />
+    <link rel="canonical" href="https://www.amigautier.work" />
     <!--Author-->
     <meta name="author" content="info.amigautier@gmail.com" />
     <!--favicon buscador-->
