--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
         </div>
 
         <div class="copyright">
-            <p>© Copyright <script>document.write(actualizarfecha)</script> Ami Gautier. All Rights Reserved.</p>
+            <p>© Copyright <script>document.write(actualizarfecha)</script> Ami Gautier. <br> All Rights Reserved.</p>
         </div>
     </footer>
 
