--- a/editorial.html
+++ b/editorial.html
@@ -323,7 +323,7 @@
 
         <div class="copyright">
             <p>© Copyright
-                <script>document.write(actualizarfecha)</script> Ami Gautier. All Rights Reserved.
+                <script>document.write(actualizarfecha)</script> Ami Gautier. <br> All Rights Reserved.
             </p>
         </div>
     </footer>
