--- a/about.html
+++ b/about.html
@@ -100,10 +100,7 @@
     <!--Contenido principal-->
     <main>
         <div class="contenedorartistas">
-            <div class="imagenartistas" id="imagenartistas_1">
-                <img src="images/about/about-2.jpg" alt="Artista Ami Gautier" />
-            </div>
-            <div class="imagenartistas" id="imagenartistas_2">
+            <div class="imagenartistas">
                 <img src="images/about/about-1.jpg" alt="Artista Ami Gautier" />
             </div>
 
@@ -133,12 +130,12 @@
 
                         <p class="icofont-behance" id="1" style="font-size: 21px;">
                             <a href="https://www.behance.net/amigautier" target="blank" id="1"
-                                style="font-size: 16px;">behance.net/amigautier</a>
+                                >behance.net/amigautier</a>
                         </p>
 
                         <p class="icofont-email" id="1" style="font-size: 21px;">
                             <a href="mailto:info.amigautier@gmail.com" target="blank" id="1"
-                                style="font-size: 16px;">info.amigautier@gmail.com</a>
+                                >info.amigautier@gmail.com</a>
                         </p>
 
                     </div>
