--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ami Gautier: Visual art</title>
+    <title>Ami Gautier</title>
     <!--Etiqueta Canonical-->
+    <!--Script Name-->
+  <script type="application/ld+json">
+  {
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Ami Gautier",
+  "url": "https://vanaalmagazine.github.io"
+  }
+  </script>
+  <!--Title-->
+  <meta property="og:site_name" content="Ami Gautier">
+  <meta property="og:title" content="Ami Gautier">
+  <meta name="twitter:title" content="Ami Gautier">
     <link rel="canonical" href="https://www.amigautier.work" />
     <!--Author-->
     <meta name="author" content="info.amigautier@gmail.com" />
@@ -15,10 +28,6 @@
     <!--Description-->
     <meta name="description"
         content="Ami Gautier is a photographer and artist known for his nostalgic and poetic style, creating a mystical atmosphere that manages to immerse the viewer." />
-    <!--Keywords-->
-    <meta name="keywords"
-        content="Ami Gautier, The Vanaal, Vanaal art department, Vanaal Magazine, Fotógrafo, Fotógrafo Bogotá, Fotografía Colombia, Fotografía Editorial Bogotá, Fotografía editorial Colombia, Fotografíade producto Bogotá, Fotografía de producto Colombia" />
-
     <!--Link hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css">
     <!--Link js para abrir menú-->
