--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ami Gautier</title>
-    <!--Etiqueta Canonical-->
+       <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.work" />
     <!--Script Name-->
   <script type="application/ld+json">
   {
