--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ami Gautier</title>
-       <!--Etiqueta Canonical-->
+    <!--Etiqueta Canonical-->
     <link rel="canonical" href="https://www.amigautier.work" />
     <!--Script Name-->
-  <script type="application/ld+json">
+    <script type="application/ld+json">
   {
   "@context": "https://schema.org",
   "@type": "WebSite",
@@ -17,11 +17,10 @@
   "url": "https://vanaalmagazine.github.io"
   }
   </script>
-  <!--Title-->
-  <meta property="og:site_name" content="Ami Gautier">
-  <meta property="og:title" content="Ami Gautier">
-  <meta name="twitter:title" content="Ami Gautier">
-    <link rel="canonical" href="https://www.amigautier.work" />
+    <!--Title-->
+    <meta property="og:site_name" content="Ami Gautier">
+    <meta property="og:title" content="Ami Gautier">
+    <meta name="twitter:title" content="Ami Gautier">
     <!--Author-->
     <meta name="author" content="info.amigautier@gmail.com" />
     <!--favicon buscador-->
@@ -29,6 +28,7 @@
     <!--Description-->
     <meta name="description"
         content="Ami Gautier is a photographer and artist known for his nostalgic and poetic style, creating a mystical atmosphere that manages to immerse the viewer." />
+
     <!--Link hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css">
     <!--Link js para abrir menú-->
@@ -252,7 +252,8 @@
                         <div class="conttxtbanner3">
                             <h2>INTROS PECTION</h2>
                             <p>
-                                Look within yourself to find the art. Allow yourself to discover the vast canvas within you.
+                                Look within yourself to find the art. Allow yourself to discover the vast canvas within
+                                you.
                             </p>
 
                         </div>
@@ -263,7 +264,9 @@
                         <div class="conttxtbanner4">
                             <h2>ART AS THERAPY</h2>
                             <p>
-                                I found a refuge where the whispers of pain dissolve in the harmony of creation. Amidst beautiful forests and with each shot of the camera, the pain is set free, and one enters a world where judgments do not exist, only the liberation of being.
+                                I found a refuge where the whispers of pain dissolve in the harmony of creation. Amidst
+                                beautiful forests and with each shot of the camera, the pain is set free, and one enters
+                                a world where judgments do not exist, only the liberation of being.
                             </p>
 
                         </div>
@@ -282,7 +285,9 @@
                 <div class="cont_txt_imgfija3">
                     <div class="txt_imgfija_3" id="txt_imgfija_3">
                         <h2>IT'S YOUR TURN</h2>
-                        <p>Let your heart and your ancestors guide you. Let go of all the pain, the tears, the fears and the judgments. Reconnect with the spirits of the forest and let your imagination soar. It's time to embark on a journey. It's time to create art.</p>
+                        <p>Let your heart and your ancestors guide you. Let go of all the pain, the tears, the fears and
+                            the judgments. Reconnect with the spirits of the forest and let your imagination soar. It's
+                            time to embark on a journey. It's time to create art.</p>
                     </div>
                 </div>
 
