--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ami Gautier</title>
+    <title>Ami Gautier: photography website of Ami Gautier</title>
     <!--Etiqueta Canonical-->
     <link rel="canonical" href="https://www.amigautier.work" />
     <!--Script Name-->
