--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   "@context": "https://schema.org",
   "@type": "WebSite",
   "name": "Ami Gautier",
-  "url": "https://vanaalmagazine.github.io"
+  "url": "https://www.amigautier.work"
   }
   </script>
     <!--Title-->
