--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ami Gautier: photography website of Ami Gautier</title>
     <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://www.amigautier.work" />
+    <link rel="canonical" href="https://www.amigautier.work/" />
     <!--Script Name-->
     <script type="application/ld+json">
   {
