--- a/editorial.html
+++ b/editorial.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--Author-->
-    <meta name="author" content="info.amigautier@gmail.com" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Tittle-->
+    <title>Ami Gautier: Editorial Photography</title>
+    <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.work/editorial.html" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
@@ -13,11 +16,10 @@
     <!--Keywords-->
     <meta name="keywords"
         content="Editorial photography, Editorial photography Vanaal, Editorial photography Bogota, Editorial photography Colombia, Editorial photography Ami Gautier, Fotografía editorial, Fotografía editorial Vanaal, Fotografía editorial Bogotá, Fotografía editorial Colombia, Fotografía editorial Ami Gautier" />
+     <!--Author-->
+    <meta name="author" content="info.amigautier@gmail.com" />
+   
     <!--Hoja de estilos-->
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editorial Photography</title>
-
     <link rel="stylesheet" href="css/estilos.css" />
     <!--Link js para abrir menú-->
     <script src="js/menu.js" defer></script>
