--- a/editorial.html
+++ b/editorial.html
@@ -8,7 +8,7 @@
     <!--Tittle-->
     <title>Ami Gautier: Editorial Photography</title>
     <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://www.amigautier.work/editorial.html" />
+    <link rel="canonical" href="https://www.amigautier.work/editorial" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
