--- a/product.html
+++ b/product.html
@@ -4,18 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Titlle-->
+    <title>Fotografía producto</title>
+    <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.work/product" />
+    <!--Description-->
+    <meta name="description" content="Photography product by photographer Ami Gautier and Vanaal art department." />
     <!--Author-->
     <meta name="author" content="info.amigautier@gmail.com" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
-    <!--Description-->
-    <meta name="description" content="Photography product by photographer Ami Gautier and Vanaal art department." />
     <!--Keywords-->
     <meta name="keywords"
         content="Product photography, Product photography Vanaal, Product photography Bogota, Product photography Colombia, Product photography Ami Gautier, Fotografía producto, Fotografía producto Vanaal, Fotografía producto Bogotá, Fotografía producto Colombia, Fotografía producto Ami Gautier" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotografía producto</title>
 
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="css/product.css" />
