--- a/atmospheric.html
+++ b/atmospheric.html
@@ -4,18 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--Author-->
-    <meta name="author" content="info.amigautier@gmail.com" />
-    <!--favicon buscador-->
-    <link rel="shortcut icon" href="images/logotipo/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Title-->
+    <title>Ami Gautier: Atmospheric photography</title>
+    <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.work/atmospheric" />
     <!--Description-->
     <meta name="description" content="Artistic photography by photographer Ami Gautier." />
+    <!--favicon buscador-->
+    <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Keywords-->
     <meta name="keywords" content="Artistic photography, Black and white photography, Atmospheric photography" />
+    <!--Author-->
+    <meta name="author" content="info.amigautier@gmail.com" />
 
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atmospheric</title>
 
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css" />
