--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Title-->
     <title>Ami Gautier: photography website of Ami Gautier</title>
     <!--Etiqueta Canonical-->
     <link rel="canonical" href="https://www.amigautier.work/" />
+    <!--Description-->
+    <meta name="description"
+        content="Ami Gautier is a photographer and artist known for his nostalgic and poetic style, creating a mystical atmosphere that manages to immerse the viewer." />
+    <!--favicon buscador-->
+    <link rel="icon" type=”image/png” href="images/logotipo/favicon.png" />
     <!--Script Name-->
     <script type="application/ld+json">
   {
@@ -23,11 +29,6 @@
     <meta name="twitter:title" content="Ami Gautier">
     <!--Author-->
     <meta name="author" content="info.amigautier@gmail.com" />
-    <!--favicon buscador-->
-    <link rel="icon" type=”image/png” href="images/logotipo/favicon.png" />
-    <!--Description-->
-    <meta name="description"
-        content="Ami Gautier is a photographer and artist known for his nostalgic and poetic style, creating a mystical atmosphere that manages to immerse the viewer." />
 
     <!--Link hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css">
