--- a/editorial.html
+++ b/editorial.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Tittle-->
+    <!--Title-->
     <title>Ami Gautier: Editorial Photography</title>
     <!--Etiqueta Canonical-->
     <link rel="canonical" href="https://www.amigautier.work/editorial" />
-    <!--favicon buscador-->
-    <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
     <meta name="description" content="Editorial photography by photographer Ami Gautier and Vanaal art department." />
+    <!--favicon buscador-->
+    <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Keywords-->
     <meta name="keywords"
         content="Editorial photography, Editorial photography Vanaal, Editorial photography Bogota, Editorial photography Colombia, Editorial photography Ami Gautier, Fotografía editorial, Fotografía editorial Vanaal, Fotografía editorial Bogotá, Fotografía editorial Colombia, Fotografía editorial Ami Gautier" />
