--- a/product.html
+++ b/product.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Titlle-->
-    <title>Fotografía producto</title>
+    <!--Title-->
+    <title>Ami Gautier: Product Photography</title>
     <!--Etiqueta Canonical-->
     <link rel="canonical" href="https://www.amigautier.work/product" />
     <!--Description-->
     <meta name="description" content="Photography product by photographer Ami Gautier and Vanaal art department." />
-    <!--Author-->
-    <meta name="author" content="info.amigautier@gmail.com" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Keywords-->
     <meta name="keywords"
         content="Product photography, Product photography Vanaal, Product photography Bogota, Product photography Colombia, Product photography Ami Gautier, Fotografía producto, Fotografía producto Vanaal, Fotografía producto Bogotá, Fotografía producto Colombia, Fotografía producto Ami Gautier" />
-
+    <!--Author-->
+    <meta name="author" content="info.amigautier@gmail.com" />
+    
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="css/product.css" />
     <link rel="stylesheet" href="css/header.css" />
