--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--Author-->
-    <meta name="author" content="info.amigautier@gmail.com" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Title-->
+    <title>Ami Gautier: Contact</title>
+    <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.work/contact" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
     <meta name="description" content="Contact photographer Ami Gautier. Email: vanaa.@amigautier.us" />
     <!--Keywords-->
     <meta name="keywords" content="Contact photographer Ami Gautier" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <!--Author-->
+    <meta name="author" content="info.amigautier@gmail.com" />
 
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css" />
