--- a/about.html
+++ b/about.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--Author-->
-    <meta name="author" content="info.amigautier@gmail.com" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Title-->
+    <title>Ami Gautier: About Me</title>
+    <!--Etiqueta Canonical-->
+    <link rel="canonical" href="https://www.amigautier.work/about" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
-    <meta name="description" content="Ami Gautier architecture photography." />
-    <!--Keywords-->
-    <meta name="keywords" content="Fotografía de arquitectura Bogotá, Photography architecture Bogotá" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <meta name="description" content="About Ami Gautier" />
+    <!--Author-->
+    <meta name="author" content="info.amigautier@gmail.com" />
+    
 
     <!--Hoja de estilos-->
     <link rel="stylesheet" href="css/estilos.css" />
