--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
-    <meta name="description" content="Contact photographer Ami Gautier. Email: vanaa.@amigautier.us" />
+    <meta name="description" content="Contact photographer Ami Gautier. Email: info.amigautier@gmail.com" />
     <!--Keywords-->
     <meta name="keywords" content="Contact photographer Ami Gautier" />
     <!--Author-->
