--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
     <!--Title-->
     <title>Ami Gautier: Product Photography</title>
     <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://www.amigautier.work/product" />
+    <link rel="canonical" href="https://amigautier.work/product" />
     <!--Description-->
     <meta name="description" content="Photography product by photographer Ami Gautier and Vanaal art department." />
     <!--favicon buscador-->
