--- a/atmospheric.html
+++ b/atmospheric.html
@@ -8,7 +8,7 @@
     <!--Title-->
     <title>Ami Gautier: Atmospheric photography</title>
     <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://www.amigautier.work/atmospheric" />
+    <link rel="canonical" href="https://amigautier.work/atmospheric" />
     <!--Description-->
     <meta name="description" content="Artistic photography by photographer Ami Gautier." />
     <!--favicon buscador-->
