--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <!--Title-->
     <title>Ami Gautier: About Me</title>
     <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://www.amigautier.work/about" />
+    <link rel="canonical" href="https://amigautier.work/about" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
