--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,19 +14,6 @@
         content="Ami Gautier is a photographer and artist known for his nostalgic and poetic style, creating a mystical atmosphere that manages to immerse the viewer." />
     <!--favicon buscador-->
     <link rel="icon" type=”image/png” href="images/logotipo/favicon.png" />
-    <!--Script Name-->
-    <script type="application/ld+json">
-  {
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "name": "Ami Gautier",
-  "url": "https://www.amigautier.work"
-  }
-  </script>
-    <!--Title-->
-    <meta property="og:site_name" content="Ami Gautier">
-    <meta property="og:title" content="Ami Gautier">
-    <meta name="twitter:title" content="Ami Gautier">
     <!--Author-->
     <meta name="author" content="info.amigautier@gmail.com" />
 
@@ -57,8 +44,6 @@
 </head>
 
 <body>
-
-    <h1 class="tituloami">Ami Gautier</h1>
 
     <!--Header-->
     <header>
