--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Title-->
     <title>Ami Gautier: photography website of Ami Gautier</title>
     <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://amigautier.work/" />
+    <link rel="canonical" href="https://www.amigautier.work/" />
     <!--Description-->
     <meta name="description"
         content="Ami Gautier is a photographer and artist known for his nostalgic and poetic style, creating a mystical atmosphere that manages to immerse the viewer." />
