--- a/editorial.html
+++ b/editorial.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <!--Title-->
     <title>Ami Gautier: Editorial Photography</title>
     <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://amigautier.work/editorial" />
+    <link rel="canonical" href="https://www.amigautier.work/editorial" />
     <!--Description-->
     <meta name="description" content="Editorial photography by photographer Ami Gautier and Vanaal art department." />
     <!--favicon buscador-->
