--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!--Title-->
     <title>Ami Gautier: Contact</title>
     <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://wamigautier.work/contact" />
+    <link rel="canonical" href="https://www.amigautier.work/contact" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
