--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <!--Title-->
     <title>Ami Gautier: About Me</title>
     <!--Etiqueta Canonical-->
-    <link rel="canonical" href="https://amigautier.work/about" />
+    <link rel="canonical" href="https://www.amigautier.work/about" />
     <!--favicon buscador-->
     <link rel="shortcut icon" href="images/logotipo/favicon.png">
     <!--Description-->
