--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Title-->
-    <title>Ami Gautier: photography website of Ami Gautier</title>
+    <title>Ami Gautier: photographer</title>
     <!--Etiqueta Canonical-->
     <link rel="canonical" href="https://www.amigautier.work/" />
     <!--Description-->
